--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_background"
+    android:background="@color/blue"
     android:orientation="vertical"
     android:paddingLeft="@dimen/screen_padding"
-    android:paddingRight="@dimen/screen_padding"
     android:paddingTop="@dimen/screen_padding"
+    android:paddingRight="@dimen/screen_padding"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -34,15 +34,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/fo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/workout"
                     android:textAllCaps="true"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -57,7 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -65,7 +69,8 @@
                     android:gravity="center"
                     android:text="@string/kcal"
                     android:textAllCaps="true"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -80,7 +85,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -88,7 +94,8 @@
                     android:gravity="center"
                     android:text="@string/minute"
                     android:textAllCaps="true"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </LinearLayout>
@@ -100,6 +107,7 @@
             android:padding="@dimen/screen_padding">
 
             <LinearLayout
+                android:id="@+id/ll_week_goal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -108,7 +116,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="sans-serif-black"
+                    android:fontFamily="@font/open_sans_light"
                     android:gravity="end"
                     android:padding="@dimen/margin_horizontal"
                     android:text="@string/week_goal"
@@ -137,20 +145,21 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/shirtless_man_training_abs_on_mat"
                 android:scaleType="centerCrop"
-                android:src="@drawable/abs_workout"
-                android:contentDescription="@string/shirtless_man_training_abs_on_mat" />
+                android:src="@drawable/abs_workout" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/margin_vertical"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/open_sans_light"
                 android:text="@string/abs_workout"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/normal_text_size" />
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
@@ -164,74 +173,21 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/muscular_man_doing_weight_lifting"
                 android:scaleType="centerCrop"
-                android:src="@drawable/chest_workout"
-                android:contentDescription="@string/muscular_man_doing_weight_lifting" />
+                android:src="@drawable/chest_workout" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/margin_vertical"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/open_sans_light"
                 android:text="@string/chest_workout"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/normal_text_size" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_legs_workout"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:cardCornerRadius="10dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/legs_workout"
-                android:contentDescription="@string/sportsman_doing_squats_in_gym" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="@dimen/margin_vertical"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/legs_workout"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/normal_text_size" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_shoulder_workout"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:cardCornerRadius="10dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/shoulder_workout"
-                android:contentDescription="@string/strong_muscular_man_lifting_dumbbell" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="@dimen/margin_vertical"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/shoulder_workout"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/normal_text_size" />
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
@@ -245,20 +201,77 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/medium_shot_man_stretching_arm"
                 android:scaleType="centerCrop"
-                android:src="@drawable/arm_workout"
-                android:contentDescription="@string/medium_shot_man_stretching_arm" />
+                android:src="@drawable/arm_workout" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/margin_vertical"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/open_sans_light"
                 android:text="@string/arms_workout"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/normal_text_size" />
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_shoulder_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/strong_muscular_man_lifting_dumbbell"
+                android:scaleType="centerCrop"
+                android:src="@drawable/shoulder_workout" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="@font/open_sans_light"
+                android:text="@string/shoulder_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_legs_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/sportsman_doing_squats_in_gym"
+                android:scaleType="centerCrop"
+                android:src="@drawable/legs_workout" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="@font/open_sans_light"
+                android:text="@string/legs_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
